# sel4test

./: .gitignore  CMakeLists.txt
apps/sel4test-driver/src/: main.c
apps/sel4test-tests/src/tests/: faults.c  inc_untyped.c  pagetables.c  schedcontext.c
integrations/sel4-sys-wrapper/: CMakeLists.txt  Cargo.toml  build.rs  lib.rs
integrations/sel4-sys-wrapper/macros/: Cargo.toml
integrations/sel4-sys-wrapper/macros/src/: lib.rs
