# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "sel4-sys-wrapper"
version = "0.1.0"
edition = "2018"
build = "build.rs"
resolver = "2"

[build-dependencies]
sel4-config = { path = "../../../cantrip/apps/system/components/cantrip-os-common/src/sel4-config" }

[features]
default = []
# Dummy feature so we are able to probe if kernel is build with MCS
CONFIG_KERNEL_MCS = []

[lib]
name = "sel4_sys"
path = "lib.rs"
crate-type = ["staticlib"]

[dependencies]
cfg-if = "1.0"
macros = { path = "macros" }
sel4-sys = { path = "../../../cantrip/apps/system/components/cantrip-os-common/src/sel4-sys", default-features = false }
